added .gitignore and added scripts for tailwind and prettier to package.json

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "## Site purpose I am just starting to build this website (in the winter of 2024/25).   It will take me a while in my limited spare time to get it organized well.   The intent of this site is to share teaching resources to anyone that would like to use them.   I store resources on GitHub. I found that many K12 teachers are not familiar with GitHub.  Since navigating GitHub can be challenging, and I wanted to learn and practice more web development. I thought I would use this github pages to help visitors navigate my repro and share some projects that I am also working on.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tailwind": "npx tailwindcss -i ./tailwindinput.css -o ./layouts/css/styles.css --watch",
+    "prettier": "npx prettier --write **/*.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17"
   }
 }
